--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_script:
   - npm run update-webdriver
   - sleep 1 # give server time to start
 
-#script:
-#  - node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Firefox
-#  - node_modules/.bin/protractor e2e-tests/protractor.conf.js --browser=firefox
+script:
+  - node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Chrome
+  - node_modules/.bin/protractor e2e-tests/protractor.conf.js --browser=chrome
